<resources>
    <string name="app_name">SettleX</string>
    <string name="error_no_internet">Connection lost. Please check your Wi-Fi or cellular data and try again</string>

    <!-- DASHBOARD NAVIGATION -->
    <string name="nav_home">Home</string>
    <string name="nav_services">Services</string>
    <string name="nav_rewards">Rewards</string>
    <string name="nav_account">Account</string>

    <!--  XML IDS -->
    <!-- REGISTER CONTACT FRAGMENT -->
    <string name="tv_sign_in">Sign in</string>
    <string name="cd_back_before">Back</string>
    <string name="tv_help">Help</string>
    <string name="title_create_your_account">Create Your Account</string>
    <string name="sub_title_enter_your_email_and_phone_number_we_ll_send_a_one_time_verification_code_otp_to_your_email_to_confirm_your_account">Enter your email and phone number. We\'ll send a one-time verification code (OTP) to your email to confirm your account.</string>
    <string name="tv_step_1_of_4">1/4</string>
    <string name="hint_enter_your_email_address">Enter your email address</string>
    <string name="tv_country_code">+234</string>
    <string name="hint_enter_your_phone_number">Enter your phone number</string>
    <string name="btn_continue">Continue</string>

    <!-- REGISTER EMAIL VERIFICATION FRAGMENT -->
    <string name="title_email_verification">Email Verification</string>
    <string name="subtitle_check_your_email_inbox">Check your email inbox</string>
    <string name="tv_step_2_of_4">2/4</string>
    <string name="label_enter_6_digit_code">Enter 6-digit code</string>
    <string name="tv_didnt_receive_the_code">Didn\'t receive the code?</string>
    <string name="tv_resend_code">Resend code</string>
    <string name="tv_verification_code">Verification code</string>

    <!-- REGISTER NAME FRAGMENT -->
    <string name="title_let_s_get_to_know_you">Let\'s Get to Know You</string>
    <string name="subtitle_what_should_we_call_you">What should we call you?</string>
    <string name="hint_enter_your_first_name">Enter your firstname</string>
    <string name="hint_enter_your_last_name">Enter your lastname</string>
    <string name="tv_step_3_of_4">3/4</string>

    <!-- REGISTER PASSWORD FRAGMENT -->
    <string name="title_create_your_password">Create Your Password</string>
    <string name="sub_title_create_a_strong_password_to_complete_your_account_setup">Create a strong password to complete your account setup.</string>
    <string name="tv_step_4_of_4">4/4</string>
    <string name="hint_create_your_password">Create your password</string>
    <string name="hint_confirm_your_password">Confirm your password</string>
    <string name="tv_have_an_invitation_code_optional">Have an Invitation Code? (Optional)</string>
    <string name="btn_expend">Expend</string>
    <string name="hint_invitation_code">Invitation Code</string>
    <string name="btn_create_account">Create Account</string>

    <!-- LOGIN ACTIVITY -->
    <string name="hint_enter_your_password">Enter your password</string>
    <string name="tv_forgot_password">Forgot Password?</string>
    <string name="btn_sign_in">Sign in</string>
    <string name="tv_don_t_have_an_account_yet_nclick_here_to_register">Don\'t have an account yet?\nClick here to register</string>
    <string name="tv_not_you_switch_account">Not you? Switch Account</string>
    <string name="subtitle_lets_help_you_reset_your_password">Lets help you reset your password</string>

    <!-- OTP VERIFICATION ACTIVITY -->
    <string name="title_otp_verification">OTP Verification</string>
    <string name="subtitle_we_ve_sent_a_6_digit_code">We\'ve sent a 6-digit code</string>
    <string name="body_please_check_the_otp_that_has_been_sent_to_your_email_and_fill_the_box">Please check the OTP that has been sent to your email and fill the box:</string>
    <string name="tv_never_share_this_code_with_anyone_including_settlex_staff">Never share this code with anyone, including SettleX staff</string>
    <string name="btn_confirm">Confirm</string>
    <string name="btn_resend">Resend</string>

    <!-- CREATE PASSWORD ACTIVITY -->
    <string name="title_change_your_password">Change Your Password</string>
    <string name="sub_title_complete_the_fields_to_update_your_password">Complete the fields to update your password.</string>
    <string name="tv_current_password">Current Password</string>
    <string name="hint_enter_your_current_password">Enter your current password</string>
    <string name="tv_new_password">New Password</string>
    <string name="hint_enter_your_new_password">Enter your new password</string>
    <string name="tv_confirm_new_password">Confirm New Password</string>
    <string name="hint_confirm_your_new_password">Confirm your new password</string>
    <string name="tv_password_requirements_info"><![CDATA[Your password must be at least 8 characters long and contain an uppercase letter, a lowercase letter, and a special character(eg., !@#$%^&*()_+-=[]{};:,.?)]]></string>
    <string name="btn_change_password">Change Password</string>

    <!-- ONBOARDING ACTIVITY -->
    <string name="btn_login">Login</string>
    <string name="btn_get_started">Get Started</string>
    <string name="tv_skip">Skip</string>

    <!-- HOME DASHBOARD FRAGMENT -->
    <string name="tv_hello">Hello 👋</string>
    <string name="tv_wallet">Wallet</string>
    <string name="tv_no_transactions_yet">No transactions yet</string>
    <string name="tv_your_recent_transactions_will_appear_here">Your recent transactions will appear here</string>
    <string name="tv_recent_transactions">Recent Transactions</string>
    <string name="tv_view_all">View ALL</string>
    <string name="tv_commission">Commission</string>
    <string name="tv_balance">Balance</string>
    <string name="tv_deposit">Deposit</string>
    <string name="tv_receive">Receive</string>
    <string name="tv_transfer">Transfer</string>
    <string name="btn_refresh">Refresh</string>

    <!-- PROFILE ACTIVITY -->
    <string name="tv_my_profile">My Profile</string>
    <string name="tv_member_since">Member Since</string>
    <string name="tv_payment_id">Payment ID</string>
    <string name="tv_full_name">Full Name</string>
    <string name="tv_phone_number">Phone Number</string>
    <string name="tv_email_address">Email Address</string>
    <string name="tv_change_profile_photo">Change Profile Photo</string>
    <string name="tv_select_from_gallery">Select from Gallery</string>
    <string name="tv_take_a_photo">Take a Photo</string>

    <!-- RECEIVE ACTIVITY -->
    <string name="tv_settlex_payment_id">SettleX Payment ID</string>
    <string name="share_ytv_our_id_to_get_paid_instantly_from_other_settlex_users">Share your ID to get paid instantly from other SettleX users.</string>
    <string name="btn_share_details">Share Details</string>
    <string name="btn_copy_id">Copy ID</string>

    <!-- SERVICES DASHBOARD FRAGMENT -->
    <string name="tv_all_services">All Services</string>
    <string name="tv_telecom_amp_digital"><![CDATA[Telecom & Digital]]></string>
    <string name="tv_entertainment">Entertainment</string>
    <string name="tv_utilities_amp_bills"><![CDATA[Utilities & Bills]]></string>
    <string name="tv_travel_amp_lifestyle"><![CDATA[Travel & Lifestyle]]></string>

    <!-- CREATE PAYMENT ID ACTIVITY -->
    <string name="tv_create_your_payment_id">Create Your Payment ID</string>
    <string name="tv_this_id_lets_others_send_you_money_securely_on_settlex_once_created_it_can_t_be_changed">This ID lets others send you money securely on SettleX. Once created, it can’t be changed</string>
    <string name="hint_choose_your_payment_id">Choose your Payment ID</string>
    <string name="tv_starts_with_a_letter">Starts with a letter</string>
    <string name="tv_min_amp_max_5_20_characters"><![CDATA[Min & Max 5-20 Characters]]></string>
    <string name="tv_only_lowercase_letters_numbers_and_no_space">Only lowercase letters numbers and no space</string>

    <!-- ONBOARDING PAGE 1 - 4 FRAGMENT -->
    <string name="tv_welcome_to_nsettlex">Welcome to\nSettleX</string>
    <string name="tv_experience_seamless_payments_and_cheaper_bundles_built_for_you_settlex_makes_every_transaction_simple">Experience seamless payments and cheaper bundles built for you. SettleX makes every transaction simple.</string>
    <string name="tv_get_the_cheapest_data_bundles_and_easily_manage_your_electricity_airtime_and_betting_payments_one_app_for_all_your_needs">Get the cheapest data bundles and easily manage your electricity, airtime, and betting payments. One app for all your needs.</string>
    <string name="tv_stay_connected_to_your_favorite_tv_and_streaming_services_renew_your_subscriptions_on_time_and_keep_the_entertainment_going">Stay connected to your favorite TV and streaming services. Renew your subscriptions on time and keep the entertainment going.</string>
    <string name="tv_we_protect_your_information_with_the_same_high_level_encryption_trusted_by_major_banks_keeping_your_personal_details_secure_and_private">We protect your information with the same high-level encryption trusted by major banks, keeping your personal details secure and private.</string>

    <!-- PAYMENT BOTTOM SHEET -->
    <string name="tv_payment_confirmation">Payment Confirmation</string>
    <string name="tv_recipient">Recipient</string>
    <string name="tv_recipient_name">Recipient Name</string>
    <string name="tv_amount">Amount</string>
    <string name="tv_payment_method">Payment Method</string>
    <string name="tv_available_balance">Available Balance</string>
    <string name="tv_wallet_balance">Wallet Balance</string>
    <string name="tv_commission_balance">Commission Balance</string>

    <!-- BOTTOM SHEET PIN AUTH PAYMENT -->
    <string name="tv_enter_payment_pin">Enter Payment Pin</string>
    <string name="btn_forgot_payment_pin">Forgot Payment Pin?</string>
    <string name="btn_confirm_transfer">Confirm Transfer</string>

    <!-- ITEM NUMERIC KEYPAD -->
    <string name="tv_settlex_secure_numeric_keypad">SettleX Secure Numeric Keypad</string>
    <string name="num_1">1</string>
    <string name="num_2">2</string>
    <string name="num_3">3</string>
    <string name="num_4">4</string>
    <string name="num_5">5</string>
    <string name="num_6">6</string>
    <string name="num_7">7</string>
    <string name="num_8">8</string>
    <string name="num_9">9</string>
    <string name="num_0">0</string>

</resources>