<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/home_fragment"
        android:icon="@drawable/nav_home_icon_selector"
        android:title="@string/nav_home"
        app:launchSingleTop="true"
        app:popUpTo="@id/home_fragment"
        app:popUpToInclusive="true" />

    <item
        android:id="@+id/services_fragment"
        android:icon="@drawable/nav_services_icon_selector"
        android:title="@string/nav_services"
        app:launchSingleTop="true" />

    <item
        android:id="@+id/rewards_fragment"
        android:icon="@drawable/nav_rewards_icon_selector"
        android:title="@string/nav_rewards"
        app:launchSingleTop="true" />

    <item
        android:id="@+id/account_fragment"
        android:icon="@drawable/nav_account_icon_selector"
        android:title="@string/nav_account"
        app:launchSingleTop="true" />
</menu>