<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorSurface"
    android:fitsSystemWindows="true"
    tools:context=".presentation.auth.forgot_password.CreatePasswordActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_arrow_back"
        app:navigationIconTint="?attr/colorOnSurface" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        android:scrollbars="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="20dp"
            android:paddingVertical="20dp">

            <TextView
                style="@style/TextAppearance.SettleX.HeadlineLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_change_your_password"
                android:textColor="?attr/colorOnSurface" />

            <TextView
                style="@style/TextAppearance.SettleX.BodyLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="15dp"
                android:text="@string/sub_title_complete_the_fields_to_update_your_password"
                android:textColor="?attr/colorOnSurfaceVariant" />

            <LinearLayout
                android:id="@+id/view_current_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:orientation="vertical">

                <TextView
                    style="@style/TextAppearance.SettleX.LabelMedium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_current_password"
                    android:textColor="?attr/colorOnSurface" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_current_password"
                    style="@style/Widget.SettleX.TextInputLayout.Outlined"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_enter_your_current_password"
                    app:endIconMode="password_toggle">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_current_password"
                        style="@style/Widget.SettleX.TextInputEditText.Outlined"
                        android:layout_width="match_parent"
                        android:layout_height="55dp"
                        android:imeOptions="actionDone"
                        android:inputType="textPassword" />
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/tv_current_password_error"
                    style="@style/TextAppearance.SettleX.BodyMedium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:textColor="?attr/colorError"
                    android:visibility="gone"
                    tools:text="error message" />
            </LinearLayout>

            <TextView
                style="@style/TextAppearance.SettleX.LabelMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/tv_new_password"
                android:textColor="?attr/colorOnSurface" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_password"
                style="@style/Widget.SettleX.TextInputLayout.Outlined"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_enter_your_new_password"
                app:endIconMode="password_toggle">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_password"
                    style="@style/Widget.SettleX.TextInputEditText.Outlined"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                style="@style/TextAppearance.SettleX.LabelMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"
                android:text="@string/tv_confirm_new_password"
                android:textColor="?attr/colorOnSurface" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_confirm_password"
                style="@style/Widget.SettleX.TextInputLayout.Outlined"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_confirm_your_new_password"
                app:endIconMode="password_toggle">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_confirm_password"
                    style="@style/Widget.SettleX.TextInputEditText.Outlined"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/tv_confirm_password_error"
                style="@style/TextAppearance.SettleX.BodyMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textColor="?attr/colorError"
                android:visibility="gone"
                tools:text="error message" />

            <TextView
                style="@style/TextAppearance.SettleX.BodySmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/bg_surface_container_rounded8"
                android:drawablePadding="5dp"
                android:padding="8dp"
                android:text="@string/tv_password_requirements_info"
                android:textColor="?attr/colorOnSurfaceVariant"
                app:drawableStartCompat="@drawable/ic_info_outline"
                app:drawableTint="?attr/colorOnSurfaceVariant" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_change_password"
                style="@style/Widget.SettleX.Button.Primary.Rounded8"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginTop="25dp"
                android:enabled="false"
                android:text="@string/btn_change_password"
                android:textSize="14sp" />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>