<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:fitsSystemWindows="true"
    tools:context=".presentation.auth.register.RegisterEmailVerificationFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/btn_back_before"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginStart="15dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/cd_back_before"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_arrow_back"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/colorOnBackground" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:fillViewport="true"
        android:scrollbars="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingHorizontal="15dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    style="@style/Widget.SettleX.TextBold"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/title_email_verification" />

                <!-- Step progress -->
                <FrameLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end">

                    <com.google.android.material.progressindicator.CircularProgressIndicator
                        android:id="@+id/progress_circle"
                        style="@style/Widget.SettleX.StepProgressIndicator"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:progress="2" />

                    <TextView
                        android:id="@+id/progress_text"
                        style="@style/Widget.SettleX.TextRegular"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/tv_step_2_of_4" />
                </FrameLayout>
            </LinearLayout>

            <TextView
                style="@style/Widget.SettleX.TextRegular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:text="@string/subtitle_check_your_email_inbox" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:layout_marginTop="15dp"
                android:contentDescription="@null"
                android:scaleType="fitCenter"
                android:src="@drawable/img_email_sent" />

            <TextView
                android:id="@+id/tv_user_email"
                style="@style/Widget.SettleX.TextRegular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/inter_medium"
                android:textSize="16sp"
                tools:text="We sent a code to example@gmail.com. This code will expire after 10 minutes" />

            <TextView
                style="@style/Widget.SettleX.TextRegular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginTop="10dp"
                android:gravity="center_vertical"
                android:text="@string/label_enter_6_digit_code"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_otp_code"
                style="@style/Widget.SettleX.TextInputEditText.Outlined"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/bg_input_field_outlined"
                android:hint="@string/tv_verification_code"
                android:imeOptions="actionDone"
                android:inputType="number"
                android:maxLength="6"
                android:paddingHorizontal="15dp" />

            <TextView
                android:id="@+id/tv_error"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="5dp"
                android:gravity="center_vertical"
                android:includeFontPadding="false"
                android:textColor="@color/red_500"
                android:textSize="13sp"
                android:visibility="gone"
                tools:text="error message" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    style="@style/Widget.SettleX.TextRegular"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_didnt_receive_the_code" />

                <TextView
                    android:id="@+id/tv_resend_code"
                    style="@style/Widget.SettleX.TextRegular"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="5dp"
                    android:text="@string/tv_resend_code"
                    android:textColor="@color/colorPrimary" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_continue"
        style="@style/Widget.SettleX.Button.Filled.Rounded8"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginHorizontal="15dp"
        android:layout_marginBottom="25dp"
        android:enabled="false"
        android:text="@string/btn_continue"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>